test/corpus/inline_decl_expr.txt
==================
inline constraint: compound body invocation
==================
Constraint Outer(input: Value) {
  Constraint(value: Value) {
    let copy = value;
  }(input);
}
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint)))
    (call_expr
      (constraint_decl
        (argument_list
          (argument
            (identifier)
            (type_constraint)))
        (let_statement
          (identifier)
          (identifier)))
      (expression_list
        (identifier)))))

==================
inline constraint: documented native body invocation
==================
Constraint Outer(input: Value) {
  Constraint(value: Value) [{
    return success();
  }](input);
}
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint)))
    (call_expr
      (constraint_decl
        (argument_list
          (argument
            (identifier)
            (type_constraint)))
        (code_block
          (code_block_content)))
      (expression_list
        (identifier)))))

==================
inline rewrite: compound body invocation
==================
Rewrite Outer(input: Value) {
  Rewrite(value: Value) {
    let copy = value;
  }(input);
}
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint)))
    (call_expr
      (rewrite_decl
        (argument_list
          (argument
            (identifier)
            (type_constraint)))
        (let_statement
          (identifier)
          (identifier)))
      (expression_list
        (identifier)))))

==================
inline rewrite: documented native body invocation
==================
Rewrite Outer(input: Value) {
  Rewrite(value: Value) [{
    return;
  }](input);
}
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint)))
    (call_expr
      (rewrite_decl
        (argument_list
          (argument
            (identifier)
            (type_constraint)))
        (code_block
          (code_block_content)))
      (expression_list
        (identifier)))))
