test/corpus/pattern.txt
==================
Simple Pattern
==================
Pattern => replace op<"my_dialect.foo"> with op<"my_dialect.bar">;
---

(source_file
  (pattern_decl
    (replace_stmt
      (op_expr
        (string))
      (op_expr
        (string)))))
